--- a/GPU-CUDA-PERFORMANCE-PROFILER/GPU-CUDA-PERFORMANCE-PROFILER.vcxproj
+++ b/GPU-CUDA-PERFORMANCE-PROFILER/GPU-CUDA-PERFORMANCE-PROFILER.vcxproj
@@ -77,6 +77,9 @@
     </CudaCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <CudaCompile Include="Cube.cu" />
+    <CudaCompile Include="File.cu" />
+    <CudaCompile Include="hello2.cu" />
     <CudaCompile Include="HelloWorld.cu" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
