feat: add l2 cache test, add choice for test

--- a/GPU-CUDA-PERFORMANCE-PROFILER/GPU-CUDA-PERFORMANCE-PROFILER.vcxproj
+++ b/GPU-CUDA-PERFORMANCE-PROFILER/GPU-CUDA-PERFORMANCE-PROFILER.vcxproj
@@ -78,9 +78,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <CudaCompile Include="Cube.cu" />
-    <CudaCompile Include="File.cu" />
-    <CudaCompile Include="hello2.cu" />
-    <CudaCompile Include="HelloWorld.cu" />
+    <CudaCompile Include="gpu_cache_benchmark.cu" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
